Fixes readability issue with font color scheme

--- a/main.css
+++ b/main.css
@@ -47,6 +47,6 @@
 }
 
 .learn-more a {
-  color: #00b0ff;
+  color: #0099FF;
 }
 
